--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,1 +1,73 @@
-h1 { color:green;}
+header {
+    padding: 1%;
+}
+main { min-height: 80vh;}
+
+h1, h2 { color:green;}
+
+.navbar {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 700;
+}
+
+
+nav a {
+    color: black;
+    text-decoration: none;
+    margin: 2px;
+    padding: 3px 12px;
+    border: 2px solid green;
+    border-radius: 25px;
+}
+
+.page-title { padding: 2%;}
+
+footer {
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    font-weight: 700;
+}
+
+/* Form Styling */
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 95%;
+    font-weight: 700;
+}
+
+form button {
+    background-color: green;
+    color: white;
+    border: 2px solid green;
+    border-radius: 25px;
+    margin: 3% 1%;
+    padding: 1px 10px;
+    cursor: pointer;
+    font-size: 1.05rem;
+    font-weight: 700;
+}
+
+fieldset { border: none;}
+
+label {
+    display: block;
+    margin-top: 1%;
+    padding: 0.5%;
+}
+
+input {
+    border: 1.5px solid black;
+    border-radius: 5px;
+    padding: 0.5;
+    font-size:110%;
+    width: 350px;
+}
