--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,7 +1,10 @@
 header {
     padding: 1%;
 }
-main { min-height: 80vh;}
+main { 
+    min-height: 80vh;
+    margin: 1%;
+}
 
 h1, h2 { color:green;}
 
@@ -43,11 +46,26 @@ footer {
     font-weight: 700;
 }
 
+.add-button {
+    font-size: 26px;
+    font-weight: 700;
+    cursor: pointer;
+
+}
+
 .edit-button {
     font-size: 26px;
     font-weight: 700;
     color: blue;
     cursor: pointer;
+}
+
+.delete-button {
+    font-size: 26px;
+    font-weight: 700;
+    color: red;
+    cursor: pointer;
+
 }
 
 .profile {
@@ -91,3 +109,19 @@ input {
     font-size:110%;
     width: 350px;
 }
+
+/* Table */
+
+table {
+    margin-left: 2%;
+    min-width: auto;
+    padding: 1%;
+}
+
+tr td {
+    text-align: center;
+    padding: 1%;
+    margin: 1% 2%;
+}
+
+tr th { min-width: 100px;}
