--- a/app/src/App.css
+++ b/app/src/App.css
@@ -102,6 +102,15 @@ label {
     padding: 0.5%;
 }
 
+
+select { border: 1.5px solid black;
+    border-radius: 5px;
+    padding: 0.5;
+    font-size:110%;
+    min-height:24px;
+    width: 350px;}
+
+
 input {
     border: 1.5px solid black;
     border-radius: 5px;
