--- a/app/src/App.css
+++ b/app/src/App.css
@@ -72,6 +72,12 @@ footer {
     margin:0 5%;
 }
 
+.account-table {
+    display: flex;
+    flex: wrap;
+    justify-content: center;
+}
+
 /* Form Styling */
 
 form {
@@ -122,7 +128,6 @@ input {
 /* Table */
 
 table {
-    margin-left: 2%;
     min-width: auto;
     padding: 1%;
 }
