--- a/app/src/App.css
+++ b/app/src/App.css
@@ -34,6 +34,7 @@ nav a {
     border: 2px solid black;
     border-radius: 5px;
     padding: 1%;
+    margin: 3%;
 }
 
 .acct-box {
@@ -63,7 +64,19 @@ nav a {
     border: 2px solid green;
     border-radius: 5px;
     padding: 1%;
+    margin: 3%;
 
+}
+.expense-category-card {
+    margin: 3%;
+    height: 300px;
+    width: 300px;
+}
+
+.main-display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .user-landing {
